<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textSize="28sp"
        android:text="@string/playerX"
        android:textColor="@color/colorPrimary"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_00"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_2"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_3"
            android:textSize="50sp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_4"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_5"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_6"
            android:textSize="50sp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_7"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_8"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/Kvadrat"
            android:layout_height="@dimen/Kvadrat"
            android:width="70dp"
            android:text="@string/_9"
            android:textSize="50sp"/>
    </TableRow>
    <TextView
        android:id="@+id/textFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="28sp"
        android:text=""
        android:textColor="@color/colorAccent"/>



</TableLayout>